enforcers/kube_enforcer/kubernetes_and_openshift/manifests/kube_enforcer/004_kube_enforcer_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqua-kube-enforcer
  namespace: aqua
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: aqua-kube-enforcer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aqua-kube-enforcer
  namespace: aqua
  labels:
    app: aqua-kube-enforcer
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: aqua-kube-enforcer
    spec:
      securityContext:
        runAsUser: 11431
        runAsGroup: 11433
        fsGroup: 11433
      serviceAccountName: aqua-kube-enforcer-sa
      containers:
        - name: kube-enforcer
          image: registry.aquasec.com/kube-enforcer:6.5
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          ports:
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: "kube-enforcer-ssl"
              mountPath: "/certs"
          #  - name: aqua-grpc-kube-enforcer
          #    mountPath: /opt/aquasec/ssl
      volumes:
        - name: "kube-enforcer-ssl"
          secret:
            secretName: "kube-enforcer-ssl"
            items:
            - key: aqua_ke.crt
              path: aqua_ke.crt
            - key: aqua_ke.key
              path: aqua_ke.key 
      #  - name: aqua-grpc-kube-enforcer
      #    secret:
      #      secretName: aqua-grpc-kube-enforcer
      imagePullSecrets:
        - name: aqua-registry
  selector:
    matchLabels:
      app: aqua-kube-enforcer
---
# Starboard Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starboard-operator
  namespace: aqua
  labels:
    app: starboard-operator
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: starboard-operator
  template:
    metadata:
      labels:
        app: starboard-operator
    spec:
      serviceAccountName: starboard-operator
      automountServiceAccountToken: true
      securityContext: {}
      containers:
        - name: operator
          image: docker.io/aquasec/starboard-operator:0.13.0
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: metrics
              containerPort: 8080
            - name: probes
              containerPort: 9090
          readinessProbe:
            httpGet:
              path: /readyz/
              port: probes
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz/
              port: probes
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
